# impactpy

./: pyproject.toml
data/: __init__.py
error/: __init__.py
impactpy/: README.md
impactpy/alpha/: __init__.py  alpha.py
impactpy/data/: bin_schedule.py  market_data.py  schema.py
impactpy/error/: error.py
impactpy/model/: __init__.py  model.py  model_mk2.py  transformers.py
impactpy/order/: __init__.py
model/: model_mk2.py  subroutines.py
order/: order.py
testing/: pipeline.ipynb  scrap.ipynb  scrap.py  scrap2.ipynb  stock_splits.ipynb  test_cfg.py  test_model.ipynb  testing.ipynb  todo.txt  what_to_display.txt
tests/data/: test_bin_schedule.py
tests/model/: test_model_examplel.ipynb
