[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["impactpy"]

[project]
name = "impactpy"
version = "0.0.19"
authors = [
  { name="Lachlan Baxter", email="lachlan.baxter@outlook.com" },
]
description = "Toolset for calibrating price impact models to LOB data"
readme = "README.md"
requires-python = ">=3.12"
classifiers= [
		"Development Status :: 1 - Planning",
		"Intended Audience :: Education",
		"Programming Language :: Python :: 3",
		"Operating System :: OS Independent",
]
dependencies = [
	"polars",
]

[project.urls]
Homepage = "https://github.com/pypa/impactpy"